--- a/sales.html
+++ b/sales.html
@@ -9,13 +9,26 @@
   <h1> Pat's Salmon Cookies</h1>
   <p> Sales By Location</p>
 <div>
-  
+  <h1 id="seattleHeader"></h1>
   <ul id="seattle"></ul>
-  <ul id="seattlecookies"></ul> 
-  <ul id= "totalcookies"></ul>
+  <ul id="seattleCookies"></ul> 
+  
 
+<h1 id="tokyoHeader"></h1>
   <ul id ="tokyo"></ul>
   <ul id ="tokyoCookies"></ul>
+
+  <h1 id="dubaiHeader"></h1>
+  <ul id ="dubai"></ul>
+  <ul id ="dubaiCookies"></ul>
+
+  <h1 id="parisHeader"></h1>
+  <ul id ="paris"></ul>
+  <ul id ="parisCookies"></ul>
+
+  <h1 id="limaHeader"></h1>
+  <ul id ="lima"></ul>
+  <ul id ="limaCookies"></ul>
 
 
 
