added notes in JS file and removed hard coded list from html

--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pat’s Salmon Cookies</title>
+  <title>Pat’s Salmon Cookies/Home</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="index.html">
 </head>
 <body>
-  
-</body>
+  <nav>
+    <a href="/index.html">Home</a>
+    <a href="/sales.html">Sales By Location</a>
+    </nav>
 <img src="" alt="">
 <h1> Pats Salmon Cookies</h1>
+
 <p> Pat Salmon cookies are a coffee-time confection. These cookies are both savory and sweet, with a hint
   of fishy goodness. "Shaped like salmon, but still a cookie?" you ask? Read on to learn how Pat landed a spot on the map of Seattle's top places to visit. </p>
-  
+</body>
+
 </html>
