--- a/sales.html
+++ b/sales.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pats Salmon Cookies</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="index.html">
 </head>
 <body>
   <h1> Pat's Salmon Cookies</h1>
   <p> Sales By Location</p>
 <div>
+  
+
   <h1 id="seattleHeader"></h1>
   <ul id="seattle"></ul>
   <ul id="seattleCookies"></ul> 
-  
 
 <h1 id="tokyoHeader"></h1>
   <ul id ="tokyo"></ul>
@@ -29,6 +32,7 @@
   <h1 id="limaHeader"></h1>
   <ul id ="lima"></ul>
   <ul id ="limaCookies"></ul>
+
 
 
 
