finished constructor function code and render with name

--- a/sales.html
+++ b/sales.html
@@ -9,27 +9,26 @@
   <h1> Pat's Salmon Cookies</h1>
   <p> Sales By Location</p>
 <div>
-  
+  <table id ="mainTable">
+    <tr>
+      <th>City</th>
+    </tr>
+  </table>
 
-  <h1 id="seattleHeader"></h1>
-  <ul id="seattle"></ul>
-  <ul id="seattleCookies"></ul> 
+  <h1 id="SeattleHeader"></h1>
+  <ul id="SeattleCookies"></ul> 
 
-<h1 id="tokyoHeader"></h1>
-  <ul id ="tokyo"></ul>
-  <ul id ="tokyoCookies"></ul>
+<h1 id="TokyoHeader"></h1>
+  <ul id ="TokyoCookies"></ul>
 
-  <h1 id="dubaiHeader"></h1>
-  <ul id ="dubai"></ul>
-  <ul id ="dubaiCookies"></ul>
+  <h1 id="DubaiHeader"></h1>
+  <ul id ="DubaiCookies"></ul>
 
-  <h1 id="parisHeader"></h1>
-  <ul id ="paris"></ul>
-  <ul id ="parisCookies"></ul>
+  <h1 id="ParisHeader"></h1>
+  <ul id ="ParisCookies"></ul>
 
-  <h1 id="limaHeader"></h1>
-  <ul id ="lima"></ul>
-  <ul id ="limaCookies"></ul>
+  <h1 id="LimaHeader"></h1>
+  <ul id ="LimaCookies"></ul>
 
 
 
