added div for hero image and color on css and comments in JS

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pat’s Salmon Cookies/Home</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="index.html">
+  <link rel="stylesheet" type="text/css" href="styles/reset.css">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
+  <div id ="banner">"Hero Banner</div>
   <nav>
     <a href="/index.html">Home</a>
     <a href="/sales.html">Sales By Location</a>
