--- a/sales.html
+++ b/sales.html
@@ -4,32 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pats Salmon Cookies</title>
+  <link rel="stylesheet" type="text/css" href="styles/reset.css">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-  <h1> Pat's Salmon Cookies</h1>
+   <div id ="banner">"Hero Banner</div> <!--add hero image(fish) in the div-->
+                                        <!-- add another div inside div with text-->
+
   <p> Sales By Location</p>
-<div>
+
   <table id ="mainTable">
-    <tr>
-      <th>City</th>
-    </tr>
   </table>
 
-  <h1 id="SeattleHeader"></h1>
-  <ul id="SeattleCookies"></ul> 
-
-<h1 id="TokyoHeader"></h1>
-  <ul id ="TokyoCookies"></ul>
-
-  <h1 id="DubaiHeader"></h1>
-  <ul id ="DubaiCookies"></ul>
-
-  <h1 id="ParisHeader"></h1>
-  <ul id ="ParisCookies"></ul>
-
-  <h1 id="LimaHeader"></h1>
-  <ul id ="LimaCookies"></ul>
-
+  
 
 
 
