added additional CSS for index.html and sales.html

--- a/sales.html
+++ b/sales.html
@@ -6,21 +6,46 @@
   <title>Pats Salmon Cookies</title>
   <link rel="stylesheet" type="text/css" href="styles/reset.css">
   <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Englebert&display=swap" rel="stylesheet">
 </head>
 <body>
-   <div id ="banner">"Hero Banner</div> <!--add hero image(fish) in the div-->
-                                        <!-- add another div inside div with text-->
-
+   <div id ="bannerTwo"><img src="cookie-stand-images/cookie-stand-chinookfish.jpg" alt="chinookfish2">
+  <div id="bannerText">Pat's Salmon Cookie Stand Sales Data Page</div>
+  </div>
+   <header>
+   <nav>
+    <ul>
+      <li>
+      <a href="/index.html">Home</a>
+      </li>
+    <li>
+      <a href="/sales.html">Sales By Location</a>
+    </li>
+    </ul>
+  </nav>
+  </header>
+  <main>
   <p> Sales By Location</p>
-
+<table>
   <table id ="mainTable">
   </table>
 
+  
   
 
 
 
 
   <script src="app.js"></script>
+  <footer> Store Locations>
+    <ul>
+    <li>Seattle</li>
+    <li>Tokyo</li>
+    <li>Dubai</li>
+    <li>Paris</li>
+    <li>Lima</li>
+    </ul>
+  </footer>
+</main>
 </body>
 </html>
