--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
   <title>Pat’s Salmon Cookies/Home</title>
   <link rel="stylesheet" type="text/css" href="styles/reset.css">
   <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Englebert&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id ="banner">"Hero Banner</div>
-  <nav>
+  <div id ="bannerOne"><img src="cookie-stand-images/cookie-stand-fish1.png" alt="fish1">
+  <div id="bannerText">Pat's Salmon Cookies</div>
+  </div>
+  <header>
+<nav id="pageOneNav">
+  <ul>
+    <li>
     <a href="/index.html">Home</a>
+    </li>
+  <li>
     <a href="/sales.html">Sales By Location</a>
-    </nav>
-<img src="" alt="">
-<h1> Pats Salmon Cookies</h1>
+  </li>
+  </ul>
+</nav>
+</header>
 
-<p> Pat Salmon cookies are a coffee-time confection. These cookies are both savory and sweet, with a hint
-  of fishy goodness. "Shaped like salmon, but still a cookie?" you ask? Read on to learn how Pat landed a spot on the map of Seattle's top places to visit. </p>
+<main>
+<h1 id="headerPageOne">The story of Pat's Salmon Cookies</h1>  
+  <img src="cookie-stand-images/cookie-stand-family.jpg" id= family alt="familyPhoto">
+
+<p class="aboutcookies"> Cookies made with fish? Yes, it's a thing.Pat Salmon cookies are a coffee-time confection. <br>
+  These cookies are both savory and sweet, with a hint of fishy goodness. <br> "Shaped like salmon, but still a cookie?" you ask? Read on to learn how Pat landed a spot on the map of Seattle's top places to visit. </p>
+</main>
 </body>
 
 </html>
