changed style of navs and footers

--- a/index.html
+++ b/index.html
@@ -19,18 +19,27 @@
     <a href="/index.html">Home</a>
     </li>
   <li>
-    <a href="/sales.html">Sales By Location</a>
+    <a href="/sales.html">Sales By Location></a>
   </li>
   </ul>
 </nav>
 </header>
 
 <main>
-<h1 id="headerPageOne">The story of Pat's Salmon Cookies</h1>  
-  <img src="cookie-stand-images/cookie-stand-family.jpg" id= family alt="familyPhoto">
+<h1 id="headerPageOne">The story of Pat's Salmon Cookies</h1> 
+<ul>
+  <li> 
+    <img src="cookie-stand-images/cookie-stand-family.jpg" id= family alt="familyPhoto">
+  </li>
+  <li>
+    <img src="cookie-stand-images/cookie-stand-cookieimg.jpg" id="fishCookie" alt="redcookie">
+  </li>
+  <li>
+    <img src="cookie-stand-images/cookie-stand-cutter.jpeg" id="cookieCutter" alt="cookiecutter">
+  </li>
 
-<p class="aboutcookies"> Cookies made with fish? Yes, it's a thing.Pat Salmon cookies are a coffee-time confection. <br>
-  These cookies are both savory and sweet, with a hint of fishy goodness. <br> "Shaped like salmon, but still a cookie?" you ask? Read on to learn how Pat landed a spot on the map of Seattle's top places to visit. </p>
+<p class="aboutcookies"> Cookies made with fish? Yes, it's a thing.Pat Salmon cookies are a coffee-time confection
+  and they are both savory and sweet, with a hint of fishy goodness. <br> "Shaped like salmon, but still a cookie?" you ask? Read on to learn how Pat landed a spot on the map of Seattle's top places to visit. </p>
 </main>
 </body>
 
