--- a/sales.html
+++ b/sales.html
@@ -14,7 +14,7 @@
   </div>
    <header>
    <nav>
-    <ul>
+    <ul class="bar">
       <li>
       <a href="/index.html">Home</a>
       </li>
@@ -25,7 +25,7 @@
   </nav>
   </header>
   <main>
-  <p> Sales By Location</p>
+  <p class="location"> Sales By Location</p>
 <table>
   <table id ="mainTable">
   </table>
