aligned images horizontally on index.html page

--- a/sales.html
+++ b/sales.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,44 +9,39 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Englebert&display=swap" rel="stylesheet">
 </head>
+
 <body>
-   <div id ="bannerTwo"><img src="cookie-stand-images/cookie-stand-chinookfish.jpg" alt="chinookfish2">
-  <div id="bannerText">Pat's Salmon Cookie Stand Sales Data Page</div>
+  <main>
+    <div id ="bannerTwo"><img src="cookie-stand-images/cookie-stand-chinookfish.jpg" alt="chinookfish2">
+      <div id="bannerText">Pat's Salmon Cookie Stand Sales Data Page</div>
   </div>
-   <header>
-   <nav>
+<header>
+  <nav>
     <ul class="bar">
       <li>
-      <a href="/index.html">Home</a>
+        <a href="/index.html">Home</a>
       </li>
-    <li>
-      <a href="/sales.html">Sales By Location</a>
-    </li>
+      <li>
+        <a href="/sales.html">Sales By Location</a>
+     </li>
     </ul>
   </nav>
-  </header>
-  <main>
+</header>
+<main>
   <p class="location"> Sales By Location</p>
-<table>
   <table id ="mainTable">
   </table>
+<script src="app.js"></script>
 
-  
-  
-
-
-
-
-  <script src="app.js"></script>
-  <footer> Store Locations>
-    <ul>
+<footer>Store Locations
+  <ul>
     <li>Seattle</li>
     <li>Tokyo</li>
     <li>Dubai</li>
     <li>Paris</li>
     <li>Lima</li>
-    </ul>
-  </footer>
+  </ul>
+</footer>
 </main>
 </body>
 </html>
