--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,16 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Englebert&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <div id ="bannerOne"><img src="cookie-stand-images/cookie-stand-fish1.png" alt="fish1">
-  <div id="bannerText">Pat's Salmon Cookies</div>
+    <div id ="bannerOne"><img src="cookie-stand-images/cookie-stand-fish1.png" alt="fish1">
+    <div id="bannerText">Pat's Salmon Cookies</div>
   </div>
-  <header>
+<header>
 <nav id="pageOneNav">
   <ul>
     <li>
-    <a href="/index.html">Home</a>
+      <a href="/index.html">Home</a>
     </li>
   <li>
     <a href="/sales.html">Sales By Location></a>
@@ -26,20 +28,30 @@
 </header>
 
 <main>
-<h1 id="headerPageOne">The story of Pat's Salmon Cookies</h1> 
-<ul>
-  <li> 
-    <img src="cookie-stand-images/cookie-stand-family.jpg" id= family alt="familyPhoto">
-  </li>
-  <li>
-    <img src="cookie-stand-images/cookie-stand-cookieimg.jpg" id="fishCookie" alt="redcookie">
-  </li>
-  <li>
-    <img src="cookie-stand-images/cookie-stand-cutter.jpeg" id="cookieCutter" alt="cookiecutter">
-  </li>
-
-<p class="aboutcookies"> Cookies made with fish? Yes, it's a thing.Pat Salmon cookies are a coffee-time confection
-  and they are both savory and sweet, with a hint of fishy goodness. <br> "Shaped like salmon, but still a cookie?" you ask? Read on to learn how Pat landed a spot on the map of Seattle's top places to visit. </p>
+  
+  <h1 id="headerPageOne">The story of Pat's Salmon Cookies</h1> 
+  <table id="photos">
+    <tr>
+      <td>
+        <ul>
+          <li> 
+            <img src="cookie-stand-images/cookie-stand-family.jpg" id= family alt="familyPhoto">
+          </li>
+        </td>
+        <td>
+          <li>
+            <img src="cookie-stand-images/cookie-stand-cookieimg.jpg" id="fishCookie" alt="redcookie">
+          </li>
+        </td>
+        <td>
+          <li>
+            <img src="cookie-stand-images/cookie-stand-cutter.jpeg" id="cookieCutter" alt="cookiecutter">
+          </li>
+      </td>
+    </tr>
+  </table>
+<p class="aboutcookies"> Cookies made with fish? Yes, it's a thing! Pat's Salmon cookies are a coffee-time confection
+  that are both savory and sweet, with a hint of fishy goodness. <br> Shaped like salmon, but still a cookie, read on to learn how Pat landed a spot on the map of Seattle's top places to visit. </p>
 </main>
 </body>
 
