--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <div id ="bannerOne"><img src="cookie-stand-images/cookie-stand-fish1.png" alt="fish1">
-    <div id="bannerText">Pat's Salmon Cookies</div>
+    <div id ="bannerOne"><img src="cookie-stand-images/cookie-stand-fish1.png"  alt="fish1">
+    <div id="bannerText">Pat's Salmon Cookie Stands</div>
   </div>
 <header>
 <nav id="pageOneNav">
@@ -26,32 +26,36 @@
   </ul>
 </nav>
 </header>
-
 <main>
   
   <h1 id="headerPageOne">The story of Pat's Salmon Cookies</h1> 
+  <p class="aboutcookies"> Cookies made with fish? Yes, it's a thing! Shaped like Salmon but still a cookie, Pat's Salmon cookies are the perfect coffee-time confection. They are both savory and sweet, with a hint of fishy goodness. <br> Read on to learn how Pat landed a spot on the map of Seattle's top places to visit. </p>
   <table id="photos">
     <tr>
       <td>
         <ul>
           <li> 
-            <img src="cookie-stand-images/cookie-stand-family.jpg" id= family alt="familyPhoto">
+            <img src="cookie-stand-images/cookie-stand-family.jpg" width="380px"id= family alt="familyPhoto">
           </li>
         </td>
         <td>
           <li>
-            <img src="cookie-stand-images/cookie-stand-cookieimg.jpg" id="fishCookie" alt="redcookie">
+            <img src="cookie-stand-images/cookie-stand-cookieimg.jpg" width="350px"id="fishCookie" alt="redcookie">
           </li>
         </td>
         <td>
           <li>
-            <img src="cookie-stand-images/cookie-stand-cutter.jpeg" id="cookieCutter" alt="cookiecutter">
+            <img src="cookie-stand-images/cookie-stand-cutter.jpeg" width="300px"id="cookieCutter" alt="cookiecutter">
           </li>
-      </td>
+        </td>
+        <td>
+          <li>
+            <img src="cookie-stand-images/cookie-stand-shirt.jpg" width="300px" id="shirt" alt="merchandise">
+          </li>
+        </td>
     </tr>
   </table>
-<p class="aboutcookies"> Cookies made with fish? Yes, it's a thing! Pat's Salmon cookies are a coffee-time confection
-  that are both savory and sweet, with a hint of fishy goodness. <br> Shaped like salmon, but still a cookie, read on to learn how Pat landed a spot on the map of Seattle's top places to visit. </p>
+
 </main>
 </body>
 
