--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Englebert&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <div id ="bannerOne"><img src="cookie-stand-images/cookie-stand-fish1.png"  alt="fish1">
     <div id="bannerText">Pat's Salmon Cookie Stands</div>
@@ -21,7 +20,10 @@
       <a href="/index.html">Home</a>
     </li>
   <li>
-    <a href="/sales.html">Sales By Location></a>
+    <a href="/sales.html">Sales By Location</a>
+  </li>
+  <li>
+    <a href="/merch-page.html">Pat's Merchandise Page</a>
   </li>
   </ul>
 </nav>
@@ -29,18 +31,18 @@
 <main>
   
   <h1 id="headerPageOne">The story of Pat's Salmon Cookies</h1> 
-  <p class="aboutcookies"> Cookies made with fish? Yes, it's a thing! Shaped like Salmon but still a cookie, Pat's Salmon cookies are the perfect coffee-time confection. They are both savory and sweet, with a hint of fishy goodness. <br> Read on to learn how Pat landed a spot on the map of Seattle's top places to visit. </p>
+  <p class="aboutcookies"> Cookies made with fish? Yes, it's a thing! Shaped like Salmon but still a cookie, Pat's Salmon cookies are the perfect coffee-time confection. They are both savory and sweet, with a hint of fishy goodness. <br> Pat's Salmon Cookies started as one small stand on Alki Beach and has since opened locations all over the map. <br> Read on to learn how Pat landed a spot on the map of Seattle's top places to visit and why Seattlites give Pat's stands two thumbs up!</p>
   <table id="photos">
     <tr>
       <td>
         <ul>
           <li> 
-            <img src="cookie-stand-images/cookie-stand-family.jpg" width="380px"id= family alt="familyPhoto">
+            <img src="cookie-stand-images/cookie-stand-family.jpg" width="350px"id= family alt="familyPhoto">
           </li>
         </td>
         <td>
           <li>
-            <img src="cookie-stand-images/cookie-stand-cookieimg.jpg" width="350px"id="fishCookie" alt="redcookie">
+            <img src="cookie-stand-images/cookie-stand-cookieimg.jpg" width="275px"id="fishCookie" alt="redcookie">
           </li>
         </td>
         <td>
@@ -55,7 +57,40 @@
         </td>
     </tr>
   </table>
-
+  <footer>Store Locations and Contact Information:
+    <hr />
+    <ul id="addresses">
+      <li>Seattle:(206)-544-4343</li>
+      <li>Tokyo: 080-1234-5678</li>
+      <li>Dubai: 971-2222-4587</li>
+      <li>Paris: 211-9854-2147</li>
+      <li>Lima: 598-1234-7854</li>
+    </ul>
+    <table id="locations">
+      <tr>
+        <td>
+          <ul>
+          <li>Seattle:324 4th Ave S, 98103</li>
+        </td>
+        <td>
+          <li>Tokyo:106-0044東京都</li>
+        </td>
+        <td>
+          <li>Dubai: 66 Al Marsa St,0000</li>
+        </td>
+        <td>
+          <li>Paris:48 Blvd. Jourdan, 75014 Paris, France.</li>
+        </td>
+        <td>
+          <li>Lima: Av. Larco 1301, Miraflores</li>
+        </td>
+        <td>
+          <li>Store Hours: 6am - 7pm PST</li>
+        </td>
+      </ul>
+      <tr>
+      </table>
+      </footer>
 </main>
 </body>
 
