--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <main>
   
   <h1 id="headerPageOne">The story of Pat's Salmon Cookies</h1> 
-  <p class="aboutcookies"> Cookies made with fish? Yes, it's a thing! Shaped like Salmon but still a cookie, Pat's Salmon cookies are the perfect coffee-time confection. They are both savory and sweet, with a hint of fishy goodness. <br> Pat's Salmon Cookies started as one small stand on Alki Beach and has since opened locations all over the map. <br> Read on to learn how Pat landed a spot on the map of Seattle's top places to visit and why Seattlites give Pat's stands two thumbs up!</p>
+  <p class="aboutcookies"> Cookies made with fish? Yes, it's a thing! Shaped like Salmon but still a cookie, Pat's Salmon cookies are the perfect coffee-time confection. They are both savory and sweet, with a hint of fishy goodness. Pat's Salmon Cookies started as one small stand on Alki Beach and has since opened locations all over the map. <br> Read on to learn how Pat landed a spot on the map of Seattle's top places to visit and why Seattleites give Pat's stands two thumbs up!</p>
   <table id="photos">
     <tr>
       <td>
