--- a/sales.html
+++ b/sales.html
@@ -16,8 +16,8 @@
       <div id="bannerText">Pat's Salmon Cookie Stand Sales Data Page</div>
   </div>
 <header>
-  <nav>
-    <ul class="bar">
+  <nav id="pageOneNav">
+    <ul>
       <li>
         <a href="/index.html">Home</a>
       </li>
@@ -67,7 +67,6 @@
   <table id="locations">
     <tr>
       <td>
-        <ul>
         <li>Seattle:324 4th Ave S, 98103</li>
       </td>
       <td>
@@ -85,7 +84,6 @@
       <td>
         <li>Store Hours: 6am - 7pm PST</li>
       </td>
-    </ul>
     <tr>
     </table>
 </footer>
