edited a href links for index.html and sales.html links to page

--- a/sales.html
+++ b/sales.html
@@ -19,13 +19,13 @@
   <nav id="pageOneNav">
     <ul>
       <li>
-        <a href="/index.html">Home</a>
+        <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="/sales.html">Sales By Location</a>
+        <a href="sales.html">Sales By Location</a>
      </li>
      <li>
-      <a href="/merch-page">Pat's Merchandise Page</a>
+      <a href="merch-page">Pat's Merchandise Page</a>
     </li>
     </ul>
   </nav>
