--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <nav id="pageOneNav">
   <ul>
     <li>
-      <a href="/index.html">Home</a>
+      <a href="index.html">Home</a>
     </li>
   <li>
-    <a href="/sales.html">Sales By Location</a>
+    <a href="sales.html">Sales By Location</a>
   </li>
   <li>
-    <a href="/merch-page.html">Pat's Merchandise Page</a>
+    <a href="merch-page.html">Pat's Merchandise Page</a>
   </li>
   </ul>
 </nav>
