--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="sales.html">Sales By Location</a>
   </li>
   <li>
-    <a href="merch-page.html">Pat's Merchandise Page</a>
+    <a href="6merch-page.html">Pat's Merchandise Page</a>
   </li>
   </ul>
 </nav>
