--- a/sales.html
+++ b/sales.html
@@ -42,13 +42,13 @@
             <input type="text" name="name">
           </legend>
           <legend>Minimum Customers
-            <input type="text" name="minCust">
+            <input type="number" name="minCust">
           </legend>
             <legend>Maximum Customers
-          <input type="text" name="maxCust">
+          <input type="number" name="maxCust">
             </legend>
           <legend>Average Customer Sales
-            <input type="text" name="avgCustomerSale">
+            <input type="number" name="avgCustomerSale">
           </legend>
             <input type="submit" name="submit" id="submit">
       </form>
