added css style to pages

--- a/sales.html
+++ b/sales.html
@@ -12,8 +12,8 @@
 
 <body>
   <main>
-    <div id ="bannerTwo"><img src="cookie-stand-images/cookie-stand-chinookfish.jpg" alt="chinookfish2">
-      <div id="bannerText">Pat's Salmon Cookie Stand Sales Data Page</div>
+    <div id ="bannerTwo"><img src="cookie-stand-images/cookie-stand-chinookfish.png" width="500px" alt="chinookfish2">
+      <div id="bannerText">Pat's Salmon Cookie Stands</div>
   </div>
 <header>
   <nav id="pageOneNav">
@@ -34,36 +34,37 @@
   <p class="location"> Sales By Location</p>
 <table id ="mainTable">
 </table>
-     <form id="addStore">
-        <fieldset>
-          <legend id="newStore"> Add New Store</legend>
-        <fieldset>
-          <legend>Name
-            <input type="text" name="name">
-          </legend>
-          <legend>Minimum Customers
-            <input type="number" name="minCust">
-          </legend>
-            <legend>Maximum Customers
-          <input type="number" name="maxCust">
-            </legend>
-          <legend>Average Customer Sales
-            <input type="number" name="avgCustomerSale">
-          </legend>
-            <input type="submit" name="submit" id="submit">
-      </form>
+<form id="addStore">
+  <fieldset>
+    <legend id="newStore"> Add New Store Below:</legend>
+  </fieldset>
+    <legend>Name:
+      <input type="text" name="name">
+    </legend>
+    <legend>Minimum Customers:
+      <input type="number" name="minCust">
+    </legend>
+    <legend>Maximum Customers:
+      <input type="number" name="maxCust">
+    </legend>
+    <legend>Average Customer Sales:
+      <input type="number" name="avgCustomerSale">
+    </legend>
+      <input type="submit" name="submit" id="submit">
+    </fieldset>
+</form>
 
 <script src="app.js"></script>
-
-<footer>Store Locations & Hours:
-  <hr />
-  <ul id="addresses">
-    <li>Seattle:(206)-544-4343</li>
-      <li>Tokyo: 080-1234-5678</li>
-      <li>Dubai: 971-2222-4587</li>
-      <li>Paris: 211-9854-2147</li>
-      <li>Lima: 598-1234-7854</li>
-  </ul>
+<footer>
+  <table id="contactInfo">
+    <tr>
+      <td>Seattle:(206)-544-4343</td>
+      <td>Tokyo: 080-1234-5678</td>
+      <td>Dubai: 971-2222-4587</td>
+      <td>Paris: 211-9854-2147</td>
+    <td>Lima: 598-1234-7854</td>
+    </tr>
+  </table>
   <table id="locations">
     <tr>
       <td>
