--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Englebert&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id ="bannerOne"><img src="cookie-stand-images/cookie-stand-fish1.png"  alt="fish1">
-    <div id="bannerText">Pat's Salmon Cookie Stands</div>
+  <div id ="bannerOne">
+    <h1 class="logo"></h1><img src="cookie-stand-images/cookie-stand-fish1.png" width="600px" alt="fishOne"></a></h1>
+      <div id="bannerText">Pat's Salmon Cookie Stands</div>
   </div>
 <header>
 <nav id="pageOneNav">
@@ -29,58 +30,42 @@
 </nav>
 </header>
 <main>
-  
-  <h1 id="headerPageOne">The story of Pat's Salmon Cookies</h1> 
-  <p class="aboutcookies"> Cookies made with fish? Yes, it's a thing! Shaped like Salmon but still a cookie, Pat's Salmon cookies are the perfect coffee-time confection. They are both savory and sweet, with a hint of fishy goodness. Pat's Salmon Cookies started as one small stand on Alki Beach and has since opened locations all over the map. <br> Read on to learn how Pat landed a spot on the map of Seattle's top places to visit and why Seattleites give Pat's stands two thumbs up!</p>
-  <table id="photos">
+  <h2 id="headerPageOne">The Story of Pat's Salmon Cookies</h1> 
+    <p class="aboutcookies"> Cookies made with fish? Yes, it's a thing! Shaped like Salmon but still a cookie, Pat's Salmon cookies are the perfect coffee-time confection. They are both savory and sweet, with a hint of fishy goodness. Pat's Salmon Cookies started as one small stand on Alki Beach and has since opened locations all over the map. Read on to learn how Pat landed a spot on the map of Seattle's top places to visit and why Seattleites give Pat's stands two thumbs up!</p>
+<table id="photos">
+  <tr>
+    <td style="background-image: url('cookie-stand-images/cookie-stand-family.jpg')">
+    </td>
+    <td style="background-image: url('cookie-stand-images/cookie-stand-cookieimg.jpg')"> 
+    </td>
+    <td style="background-image: url(cookie-stand-images/cookie-stand-cutter.jpeg)">
+    </td>
+    <td style="background-image: url(cookie-stand-images/cookie-stand-shirt.jpg)">
+    </td>
+    </tr>
+</table>
+
+<footer>
+  <table id="addresses">
     <tr>
-      <td>
-        <img src="cookie-stand-images/cookie-stand-family.jpg" width="350px"id= family alt="familyPhoto">
-      </td>
-      <td>
-        <img src="cookie-stand-images/cookie-stand-cookieimg.jpg" width="275px"id="fishCookie" alt="redcookie">
-      </td>
-      <td>
-        <img src="cookie-stand-images/cookie-stand-cutter.jpeg" width="300px"id="cookieCutter" alt="cookiecutter">
-      </td>
-      <td>
-        <img src="cookie-stand-images/cookie-stand-shirt.jpg" width="300px" id="shirt" alt="merchandise">
-      </td>
+      <td>Seattle:(206)-544-4343</td>
+        <td>Tokyo: 080-1234-5678</td>
+        <td>Dubai: 971-2222-4587</td>
+        <td>Paris: 211-9854-2147</td>
+      <td>Lima: 598-1234-7854</td>
     </tr>
   </table>
-  <footer>Store Locations and Contact Information:
-    <hr />
-    <ul id="addresses">
-      <li>Seattle:(206)-544-4343</li>
-      <li>Tokyo: 080-1234-5678</li>
-      <li>Dubai: 971-2222-4587</li>
-      <li>Paris: 211-9854-2147</li>
-      <li>Lima: 598-1234-7854</li>
-    </ul>
-    <table id="locations">
-      <tr>
-        <td>
-          <li>Seattle:324 4th Ave S, 98103</li>
-        </td>
-        <td>
-          <li>Tokyo:106-0044東京都</li>
-        </td>
-        <td>
-          <li>Dubai: 66 Al Marsa St,0000</li>
-        </td>
-        <td>
-          <li>Paris:48 Blvd. Jourdan, 75014 Paris, France.</li>
-        </td>
-        <td>
-          <li>Lima: Av. Larco 1301, Miraflores</li>
-        </td>
-        <td>
-          <li>Store Hours: 6am - 7pm PST</li>
-        </td>
-      <tr>
-      </table>
-      </footer>
+  <table id="locations">
+    <tr>
+      <td>Seattle:324 4th Ave S, 98103</td>
+      <td>Tokyo:106-0044東京都</td>
+      <td>Dubai: 66 Al Marsa St,0000</td>
+      <td>Paris:48 Blvd. Jourdan, 75014 Paris, France.</td>
+      <td>Lima: Av. Larco 1301, Miraflores</td>
+      <td>Store Hours: 6am - 7pm PST</td>
+    <tr>
+  </table>
+</footer>
 </main>
 </body>
-
 </html>
