fixed link to merchandise page on sales.html and index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a href="sales.html">Sales By Location</a>
   </li>
   <li>
-    <a href="6merch-page.html">Pat's Merchandise Page</a>
+    <a href="merch-page.html">Pat's Merchandise Page</a>
   </li>
   </ul>
 </nav>
