--- a/sales.html
+++ b/sales.html
@@ -25,7 +25,7 @@
         <a href="sales.html">Sales By Location</a>
      </li>
      <li>
-      <a href="merch-page">Pat's Merchandise Page</a>
+      <a href="merch-page.html">Pat's Merchandise Page</a>
     </li>
     </ul>
   </nav>
