added padding to locations info and addresses info in footer

--- a/sales.html
+++ b/sales.html
@@ -67,24 +67,12 @@
   </table>
   <table id="locations">
     <tr>
-      <td>
-        <li>Seattle:324 4th Ave S, 98103</li>
-      </td>
-      <td>
-        <li>Tokyo:106-0044東京都</li>
-      </td>
-      <td>
-        <li>Dubai: 66 Al Marsa St,0000</li>
-      </td>
-      <td>
-        <li>Paris:48 Blvd. Jourdan, 75014 Paris, France.</li>
-      </td>
-      <td>
-        <li>Lima: Av. Larco 1301, Miraflores</li>
-      </td>
-      <td>
-        <li>Store Hours: 6am - 7pm PST</li>
-      </td>
+      <td>Seattle:324 4th Ave S, 98103</td>
+      <td>Tokyo:106-0044東京都</td>
+      <td>Dubai: 66 Al Marsa St,0000</td>
+      <td>Paris:48 Blvd. Jourdan, 75014 Paris, France.</td>
+      <td>Lima: Av. Larco 1301, Miraflores</td>
+      <td>Store Hours: 6am - 7pm PST</td>
     <tr>
     </table>
 </footer>
