adding padding to locationsOne id

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <td>Lima: 598-1234-7854</td>
     </tr>
   </table>
-  <table id="locations">
+  <table id="locationsOne">
     <tr>
       <td>Seattle:324 4th Ave S, 98103</td>
       <td>Tokyo:106-0044東京都</td>
